--- a/menu-pizzamigo/web/desayuno.html
+++ b/menu-pizzamigo/web/desayuno.html
@@ -52,14 +52,14 @@
           <p>Infusión + 2 Medialunas o Tortillas + Soda y Jugo</p>
         </div>
         <div class="col-5">
-          <!-- imagen del desayuno -->
-          <img class="precio" src="../1400.png" alt="$1400" srcset="">
+          <!-- imagen del desayuno tradicional-->
+          <img class="precio" src="../1800.png" alt="$1800" srcset="">
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-5">
-          <!-- imagen del desayuno -->
-          <img class="precio" src="../1600.png" alt="$1600" srcset="">
+          <!-- imagen del desayuno continental-->
+          <img class="precio" src="../2000.png" alt="$2000" srcset="">
         </div>
         <div class="col-7 ">
           <h2 class="marco text-center">CONTINENTAL:</h2>
@@ -68,18 +68,18 @@
         </div>
       </div>
       <div class="row mt-5">
-
+          <!-- precio licuados  -->
         <div class="col-6 text-center marco p-3" style="font-size: 1.3rem;">PROMO LICUADO + 1/2 TOSTADO</div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../1700.png" alt="1700" srcset="">
+          <img class="precio" src="../2100.png" alt="2100" srcset="">
         </div>
       </div>
 
 
       <div class="row mt-5">
         <div class="col-5">
-          <!-- imagen del desayuno -->
-          <img class="precio" src="../1500.png" alt="1500" srcset="">
+          <!-- imagen del desayuno light-->
+          <img class="precio" src="../1700.png" alt="1700" srcset="">
         </div>
         <div class="col-7">
           <h2 class="marco text-center">LIGHT:</h2>
@@ -93,14 +93,14 @@
           <p class="text-start">Infusión + 2 Pan de Campo + Huevo Revuelto + Palta + Ens. de Fruta + Soda y Jugo</p>
         </div>
         <div class="col-5">
-          <!-- imagen del desayuno -->
-          <img class="precio" src="../2000.png" alt="2000" srcset="">
+          <!-- imagen del desayuno proteico-->
+          <img class="precio" src="../2700.png" alt="2700" srcset="">
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-5">
-          <!-- imagen del desayuno -->
-          <img class="precio" src="../1700.png" alt="1700" srcset="">
+          <!-- imagen del desayuno jyq -->
+          <img class="precio" src="../2200.png" alt="2200" srcset="">
         </div>
         <div class="col-7">
           <h2 class="marco text-center">Jamón y Queso:</h2>
@@ -115,16 +115,16 @@
             Soda y Jugo.</p>
         </div>
         <div class="col-5">
-          <!-- imagen del desayuno -->
-          <img class="precio" src="../2000.png" alt="" srcset="">
+          <!-- imagen del desayuno americano-->
+          <img class="precio" src="../2900.png" alt="" srcset="">
         </div>
       </div>
 
 
       <div class="row mt-5">
         <div class="col-5">
-          <!-- imagen del desayuno -->
-          <img class="precio" src="../4000.png" alt="" srcset="">
+          <!-- imagen del desayuno  combo americano-->
+          <img class="precio" src="../5000.png" alt="" srcset="">
         </div>
         <div class="col-7 ">
           <h2 class="marco text-center">COMBO AMERICANO:</h2>
@@ -142,27 +142,27 @@
           <p class="text-start">CAFÉ POCILLO</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../500.png" alt="$500" srcset="">
+          <img class="precio" src="../600.png" alt="$500" srcset="">
         </div>
         <div class="col-6 mt-5">
           <p>CAFÉ JARRITO</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../600.png" alt="$600" srcset="">
+          <img class="precio" src="../750.png" alt="$600" srcset="">
 
         </div>
         <div class="col-6 mt-5">
           <p>CAFÉ DOBLE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../700.png" alt="$700" srcset="">
+          <img class="precio" src="../900.png" alt="$700" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>CAPUCHINO</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../900.png" alt="$900" srcset="">
+          <img class="precio" src="../1100.png" alt="$900" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
@@ -176,28 +176,28 @@
           <p>JUGO CHICO</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../700.png" alt="$700" srcset="">
+          <img class="precio" src="../900.png" alt="$700" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>JUGO GRANDE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../1250.png" alt="$1250" srcset="">
+          <img class="precio" src="../1500.png" alt="$1250" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>LICUADOS</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../1100.png" alt="$1100" srcset="">
+          <img class="precio" src="../1500.png" alt="$1100" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>SUBMARINO</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../900.png" alt="$900" srcset="">
+          <img class="precio" src="../1200.png" alt="$900" srcset="">
           <!-- precio -->
         </div>
       </div>
@@ -208,63 +208,63 @@
         </div>
         <div class="row mt-5">
           <div class="col-6 mt-5">
-            <img class="precio" src="../450.png" alt="$450" srcset="">
+            <img class="precio" src="../500.png" alt="$450" srcset="">
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">MEDIALUNAS</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../150.png" alt="$300" srcset="">
+            <img class="precio" src="../300.png" alt="$300" srcset="">
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">CRIOLLO</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../600.png" alt="$600" srcset="">
+            <img class="precio" src="../800.png" alt="$600" srcset="">
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">MEDIALUNAS JYQ</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../150.png" alt="$300" srcset="">
+            <img class="precio" src="../300.png" alt="$300" srcset="">
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">TOSTADAS DE CAMPO X2</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../200.png" alt="$300" srcset="">
+            <img class="precio" src="../500.png" alt="$300" srcset="">
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">MANTECA Y MERMELADA O QUESO</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../800.png" alt="$800" srcset="">
+            <img class="precio" src="../1000.png" alt="$800" srcset="">
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">HUEVO REVUELTO</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../800.png" alt="$800" srcset="">
+            <img class="precio" src="../1000.png" alt="$800" srcset="">
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">CAZUELA PALTA</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../500.png" alt="$500" srcset="">
+            <img class="precio" src="../1000.png" alt="$500" srcset="">
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">JAMÓN Y QUESO</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../1200.png" alt="$1200" srcset="">
+            <img class="precio" src="../1500.png" alt="$1200" srcset="">
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
