--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -54,75 +54,69 @@
         <p>Milanesa c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3000.png" alt="$3000" srcset="">
+        <img class="precio " src="../3500.png" alt="$3000" srcset="">
       </div>
       <div class="col-6 mt-5">
         <p>Bife de lomo c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3500.png" alt="$2400" srcset="">
+        <img class="precio " src="../4300.png" alt="$2400" srcset="">
       </div>
       <div class="col-6 mt-5">
         <p>Napolitana c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3200.png" alt="$3200" srcset="">
+        <img class="precio " src="../3800.png" alt="$3200" srcset="">
       </div>
       <div class="col-6 mt-5">
         <p>Costillitas a la barbacoa c/ papas Españolas</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3300.png" alt="3300" srcset="">
+        <img class="precio " src="../4000.png" alt="3300" srcset="">
       </div>
       <div class="col-6 mt-5">
         <p>Bife de pollo c/Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../2800.png" alt="2800" srcset="">
+        <img class="precio " src="../3300.png" alt="2800" srcset="">
       </div>
       <div class="col-6 mt-5">
         <p>Lomo a la Frontera</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3500.png" alt="3500" srcset="">
+        <img class="precio " src="../4300.png" alt="3500" srcset="">
       </div>
       <div class="col-6 mt-5">
         <p>Lomo al Champignon</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3500.png" alt="3500" srcset="">
+        <img class="precio " src="../4300.png" alt="3500" srcset="">
       </div>
       <div class="col-6 mt-5">
         <p>Pollo al champignon</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3000.png" alt="3000" srcset="">
+        <img class="precio " src="../4000.png" alt="3000" srcset="">
       </div>
-      <!-- <div class="col-6 mt-5">
-        <p>ochet Mixtos</p>
-      </div>
-      <div class="col-6 mt-5">
-        <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
-      </div> -->
       <div class="col-6 mt-5">
         <p>Costeleta c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3300.png" alt="3300" srcset="">
+        <img class="precio " src="../3800.png" alt="3300" srcset="">
       </div>
 
       <div class="col-6 mt-5">
         <p>Costeleta a la Riojana c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio" src="../3200.png" alt="3200" srcset="">
+        <img class="precio" src="../4100.png" alt="3200" srcset="">
       </div>
 
       <div class="col-6 mt-5">
         <p>Milanesa de Cerdo c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../2700.png" class="precio" alt="$2700" srcset="">
+        <img src="../3300.png" class="precio" alt="$2700" srcset="">
       </div>
 
 
@@ -130,7 +124,7 @@
         <p>Milanesa de Berenjena c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../2500.png" class="precio" alt="2500" srcset="">
+        <img src="../3000.png" class="precio" alt="2500" srcset="">
       </div>
 
 
@@ -138,20 +132,56 @@
         <p>Suprema c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../2800.png" class="precio" alt="2800" srcset="">
+        <img src="../3300.png" class="precio" alt="2800" srcset="">
       </div>
 
       <div class="col-6 mt-5">
         <p>Mila a Caballo c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3200.png" alt="3200" srcset="">
+        <img class="precio " src="../3800.png" alt="3200" srcset="">
       </div>
-
-
+      <!-- Tabla de milanesa -->
 
       <div class="col-12 mt-5">
-        <h2 class="marco  text-center">GUARNICIÓN C/U $1500</h2>
+        <h2 class="marco text-center">Tabla de Milanesa P/Compartir + Guarnición + Bebida 1L</h2>
+      </div>
+
+      <div class="col-6 mt-5">
+        <p>Mila Napolitana</p>
+      </div>
+      <div class="col-6 mt-5">
+        <img class="precio " src="../7500.png" alt="3200" srcset="">
+      </div>
+
+      <div class="col-6 mt-5">
+        <p>Mila a Caballo</p>
+      </div>
+      <div class="col-6 mt-5">
+        <img class="precio " src="../7800.png" alt="3200" srcset="">
+      </div>
+      <div class="col-6 mt-5">
+        <p>Mila Cheddar C/bacon, verdeo</p>
+      </div>
+      <div class="col-6 mt-5">
+        <img class="precio " src="../8500.png" alt="3200" srcset="">
+      </div>
+      <div class="col-6 mt-5">
+        <p>Mila Fugazzeta</p>
+      </div>
+      <div class="col-6 mt-5">
+        <img class="precio " src="../7500.png" alt="3200" srcset="">
+      </div>
+      <div class="col-6 mt-5">
+        <p>Mila Choclo</p>
+      </div>
+      <div class="col-6 mt-5">
+        <img class="precio " src="../7800.png" alt="3200" srcset="">
+      </div>
+        <!-- Fin tabla -->
+
+      <div class="col-12 mt-5">
+        <h2 class="marco  text-center">GUARNICIÓN C/U $1800</h2>
       </div>
 
       <div class="col-12 text-center mt-5">
@@ -184,11 +214,11 @@
       </div>
       <div class="col-6 text-center">
         <p>Unidad</p>
-        <img class="precio" src="../350.png" alt="" srcset="">
+        <img class="precio" src="../400.png" alt="" srcset="">
       </div>
       <div class="col-6 text-center">
         <p>Docena</p>
-        <img class="precio" src="../3500.png" alt="" srcset="">
+        <img class="precio" src="../4000.png" alt="" srcset="">
       </div>
       <!-- contenido de entradas -->
       <div class="col-12 text-center mt-5">
@@ -217,21 +247,21 @@
       </div>
       <!-- contenido sandwich -->
       <div class="col-6 mt-5 ">
-        <img class="precio " src="../2800.png" alt="precio" srcset="">
+        <img class="precio " src="../3000.png" alt="precio" srcset="">
       </div>
       <div class="col-6 mt-5 text-end">
         <p>LOMO</p>
       </div>
 
       <div class="col-6 mt-5 ">
-        <img class="precio " src="../2800.png" alt="precio" srcset="">
+        <img class="precio " src="../3000.png" alt="precio" srcset="">
       </div>
       <div class="col-6 mt-5 text-end">
         <p>MILA</p>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../2600.png" alt="precio" srcset="">
+        <img class="precio " src="../2800.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-end">
         <p>HAMBURGUESA</p>
@@ -250,14 +280,14 @@
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../1500.png" alt="precio" srcset="">
+        <img class="precio " src="../1800.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-end">
         <p>PORCIÓN DE PAPAS</p>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../1800.png" alt="precio" srcset="">
+        <img class="precio " src="../2200.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-center">
         <p>PAPAS BRAVAS CON CHEDDAR Y PANCETA</p>
