--- a/menu-pizzamigo-english/web/plato.html
+++ b/menu-pizzamigo-english/web/plato.html
@@ -54,56 +54,56 @@
         <p>Milanesa With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3300.png" alt="2800" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3500.png" alt="2800" srcset="">
       </div>
       <div class="col-6 mt-5">
         <!-- bife de lomo c/guarnicion -->
         <p>Steak With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3500.png" alt="3500" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/4300.png" alt="3500" srcset="">
       </div>
       <div class="col-6 mt-5">
         <!-- napolitana -->
         <p>Milanesa Napolitana With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3200.png" alt="3000" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3800.png" alt="3000" srcset="">
       </div>
       <div class="col-6 mt-5">
         <!-- costilla a la barbacoa -->
         <p>Barbecue Ribs With Spain Potatoes</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3300.png" alt="3300" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/4000.png" alt="3300" srcset="">
       </div>
       <div class="col-6 mt-5">
         <!-- bife de pollo -->
         <p>Chicken Steak With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/2800.png" alt="2800" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3300.png" alt="2800" srcset="">
       </div>
       <div class="col-6 mt-5">
         <!-- lomo a la frontera -->
         <p>Frontier Steak</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3500.png" alt="3500" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/4300.png" alt="3500" srcset="">
       </div>
       <div class="col-6 mt-5">
         <!-- lomo al champ -->
         <p>Steak with Mushrooms Sauce</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3500.png" alt="3500" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/4300.png" alt="3500" srcset="">
       </div>
       <div class="col-6 mt-5">
         <!-- pollo al champi -->
         <p>Chicken with mushrooms sauce</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="3000" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/4000.png" alt="3000" srcset="">
       </div>
       <!-- <div class="col-6 mt-5">
         <p>Mix Brochet</p>
@@ -116,7 +116,7 @@
         <p>Costelette With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="3000" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3800.png" alt="3000" srcset="">
       </div>
 
 
@@ -126,7 +126,7 @@
         <p>Riojan style chops With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio" src="../../menu-pizzamigo/3200.png" alt="3200" srcset="">
+        <img class="precio" src="../../menu-pizzamigo/4100.png" alt="3200" srcset="">
       </div>
 
       <div class="col-6 mt-5">
@@ -134,7 +134,7 @@
         <p>pork Milanesa With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../../menu-pizzamigo/2700.png" class="precio" alt="" srcset="">
+        <img src="../../menu-pizzamigo/3300.png" class="precio" alt="" srcset="">
       </div>
 
 
@@ -143,7 +143,7 @@
         <p>eggplant Milanesa With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../../menu-pizzamigo/2500.png" class="precio" alt="2500" srcset="">
+        <img src="../../menu-pizzamigo/3000.png" class="precio" alt="2500" srcset="">
       </div>
 
 
@@ -152,7 +152,7 @@
         <p>Chicken Supreme With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../../menu-pizzamigo/2800.png" class="precio" alt="2700" srcset="">
+        <img src="../../menu-pizzamigo/3300.png" class="precio" alt="2700" srcset="">
       </div>
 
 
@@ -163,13 +163,52 @@
         <p>Milanesa with fried egg</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3200.png" alt="3000" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3800.png" alt="3000" srcset="">
       </div>
+
+        <!-- Tabla de milanesa -->
+
+        <div class="col-12 mt-5">
+          <h2 class="marco text-center">Milanese table to share + Garnish + Beverages 1L</h2>
+        </div>
+  
+        <div class="col-6 mt-5">
+          <p>Milanesa Napolitana</p>
+        </div>
+        <div class="col-6 mt-5">
+          <img class="precio " src="../../menu-pizzamigo/7500.png" alt="7500" srcset="">
+        </div>
+  
+        <div class="col-6 mt-5">
+          <p>Milanesa with fried egg</p>
+        </div>
+        <div class="col-6 mt-5">
+          <img class="precio " src="../../menu-pizzamigo/7800.png" alt="3200" srcset="">
+        </div>
+        <div class="col-6 mt-5">
+          <p>Milanesa with Cheddar, bacon and green onion chopped </p>
+        </div>
+        <div class="col-6 mt-5">
+          <img class="precio " src="../../menu-pizzamigo/8500.png" alt="3200" srcset="">
+        </div>
+        <div class="col-6 mt-5">
+          <p>Milanesa to the Fugazzeta</p>
+        </div>
+        <div class="col-6 mt-5">
+          <img class="precio " src="../../menu-pizzamigo/7500.png" alt="3200" srcset="">
+        </div>
+        <div class="col-6 mt-5">
+          <p>Milanesa with Corn</p>
+        </div>
+        <div class="col-6 mt-5">
+          <img class="precio " src="../../menu-pizzamigo/7800.png" alt="3200" srcset="">
+        </div>
+          <!-- Fin tabla -->
 
 
 
       <div class="col-12 mt-5">
-        <h2 class="marco  text-center">Each Garnish $1500</h2>
+        <h2 class="marco  text-center">Each Garnish $1800</h2>
       </div>
 
       <div class="col-12 text-center mt-5">
@@ -200,17 +239,20 @@
       </div>
       <!-- fin de al plato -->
 
+
+
+
       <!-- titulo empanada -->
       <div class="col-12 mt-4">
         <h2 class="mt-3 marco text-center">Empanadas:</h2>
       </div>
       <div class="col-6 text-center">
         <p>Per Unite</p>
-        <img class="precio" src="../../menu-pizzamigo/350.png" alt="" srcset="">
+        <img class="precio" src="../../menu-pizzamigo/400.png" alt="" srcset="">
       </div>
       <div class="col-6 text-center">
         <p>Dozen</p>
-        <img class="precio" src="../../menu-pizzamigo/3500.png" alt="" srcset="">
+        <img class="precio" src="../../menu-pizzamigo/4000.png" alt="" srcset="">
       </div>
       <!-- contenido de entradas -->
       <div class="col-12 text-center mt-5">
@@ -239,21 +281,21 @@
       </div>
       <!-- contenido sandwich -->
       <div class="col-6 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/2800.png" alt="precio" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="precio" srcset="">
       </div>
       <div class="col-6 mt-5 text-end">
         <p>LOMO</p>
       </div>
 
       <div class="col-6 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/2800.png" alt="precio" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="precio" srcset="">
       </div>
       <div class="col-6 mt-5 text-end">
         <p>MILA</p>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/2600.png" alt="precio" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/2800.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-end">
         <p>BURGUER</p>
@@ -273,14 +315,14 @@
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/1500.png" alt="precio" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/1800.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-end">
         <p>ONE SERVING OF FRIED POTATOES</p>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/1800.png" alt="precio" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/2200.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-center">
         <p>PAPAS BRAVAS (HOT FRIES WITH CHEDDAR AND BACON)</p>
