--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -53,8 +53,9 @@
       <div class="col-6 mt-5">
         <p>Milanesa c/ Guarnición</p>
       </div>
-      <div class="col-6 mt-5">
-        <img class="precio " src="../3500.png" alt="$3000" srcset="">
+      <div class="col-6 mt-5 ">
+        <span class="text-black text-center pp p-5">$3500</span>
+        <!-- <img class="precio " src="../precio-sin-num.png" alt="$3000" srcset=""> -->
       </div>
       <div class="col-6 mt-5">
         <p>Bife de lomo c/ Guarnición</p>
