--- a/menu-pizzamigo-english/web/desayuno.html
+++ b/menu-pizzamigo-english/web/desayuno.html
@@ -52,14 +52,14 @@
         </div>
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../../menu-pizzamigo/1800.png" alt="" srcset="">
+          <span class="text-black text-center pp p-5" id="tradicional"></span>
         </div>
       </div>
 
       <div class="row mt-5">
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../../menu-pizzamigo/2000.png" alt="" srcset="">
+          <span class="text-black text-center pp p-5" id="continental"></span>
         </div>
         <div class="col-7 ">
           <h2 class="marco text-center">CONTINENTAL:</h2>
@@ -73,7 +73,7 @@
         <div class="col-6 text-center marco p-3" style="font-size: 1.3rem;">OFFER SMOOTHIE + ½ HAM & CHEESE GRILLED
           SANDWICH</div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/2100.png" alt="" srcset="">
+          <span class="text-black text-center pp p-5" id="licuados"></span>
         </div>
       </div>
 
@@ -81,7 +81,7 @@
       <div class="row mt-5">
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../../menu-pizzamigo/1700.png" alt="" srcset="">
+          <span class="text-black text-center pp p-5" id="light"></span>
         </div>
         <div class="col-7">
           <h2 class="marco text-center">LIGHT:</h2>
@@ -97,14 +97,14 @@
         </div>
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../../menu-pizzamigo/2700.png" alt="" srcset="">
+          <span class="text-black text-center pp p-5" id="proteico"></span>
         </div>
       </div>
 
       <div class="row mt-5">
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../../menu-pizzamigo/2200.png" alt="" srcset="">
+          <span class="text-black text-center pp p-5" id="jamonyqueso"></span>
         </div>
         <div class="col-7">
           <h2 class="marco text-center">HAM & CHEESE:</h2>
@@ -120,7 +120,7 @@
         </div>
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../../menu-pizzamigo/2900.png" alt="" srcset="">
+          <span class="text-black text-center pp p-5" id="americano"></span>
         </div>
       </div>
 
@@ -128,7 +128,7 @@
       <div class="row mt-5">
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../../menu-pizzamigo/5000.png" alt="" srcset="">
+          <span class="text-black text-center pp p-5" id="comboAmericano"></span>
         </div>
         <div class="col-7 ">
           <h2 class="marco text-center">AMERICAN COMBO:</h2>
@@ -146,62 +146,62 @@
           <p class="text-start">SMALL CUP OF COFFEE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/600.png" alt="$400" srcset="">
+          <span class="text-black text-center pp p-5" id="cafechico"></span>
         </div>
         <div class="col-6 mt-5">
           <p>MEDIUM CUP OF COFFEE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/750.png" alt="$500" srcset="">
+          <span class="text-black text-center pp p-5" id="cafejarrito"></span>
 
         </div>
         <div class="col-6 mt-5">
           <p>DOUBLE COFFEE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/900.png" alt="$600" srcset="">
+          <span class="text-black text-center pp p-5" id="cafedoble"></span>
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>CAPUCHINO</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/1100.png" alt="$700" srcset="">
+          <span class="text-black text-center pp p-5" id="capuchino"></span>
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>TEA- DOUBLE MATE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/500.png" alt="$500" srcset="">
+          <span class="text-black text-center pp p-5" id="te"></span>
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>SMALL JUICE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/900.png" alt="$400" srcset="">
+          <span class="text-black text-center pp p-5" id="jugochico"></span>
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>BIG JUICE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/1500.png" alt="$900" srcset="">
+          <span class="text-black text-center pp p-5" id="jugogrande"></span>
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>SMOOTHIE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/1500.png" alt="$900" srcset="">
+          <span class="text-black text-center pp p-5" id="licuados2"></span>
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>HOT MILK WITH CHOCOLATE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/1200.png" alt="$700" srcset="">
+          <span class="text-black text-center pp p-5" id="submarino"></span>
           <!-- precio -->
         </div>
       </div>
@@ -214,63 +214,63 @@
         </div>
         <div class="row mt-5">
           <div class="col-6 mt-5">
-            <img class="precio" src="../../menu-pizzamigo/500.png" alt="$300" srcset="">
+            <span class="text-black text-center pp p-5" id="medialuna"></span>
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">CROISSANT</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../../menu-pizzamigo/300.png" alt="$300" srcset="">
+            <span class="text-black text-center pp p-5" id="criollo"></span>
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">CREOLE BREAD</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../../menu-pizzamigo/800.png" alt="$300" srcset="">
+            <span class="text-black text-center pp p-5" id="madialunajyq"></span>
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">CROISSANT HAM & CHEESE</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../../menu-pizzamigo/300.png" alt="$300" srcset="">
+            <span class="text-black text-center pp p-5" id="tostadascampo"></span>
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">2 FIELD TOAST</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../../menu-pizzamigo/500.png" alt="$300" srcset="">
+            <span class="text-black text-center pp p-5" id="manteca"></span>
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">BUTTER & JAM OR CHEESE</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../../menu-pizzamigo/1000.png" alt="$500" srcset="">
+            <span class="text-black text-center pp p-5" id="huevo"></span>
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">SCRAMBLED EGGS</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../../menu-pizzamigo/1000.png" alt="$500" srcset="">
+            <span class="text-black text-center pp p-5" id="palta"></span>
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">GUACAMOLE</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../../menu-pizzamigo/1000.png" alt="$500" srcset="">
+            <span class="text-black text-center pp p-5" id="jyq"></span>
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">SLICE OF HAM & CHEESE</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../../menu-pizzamigo/1500.png" alt="$300" srcset="">
+            <span class="text-black text-center pp p-5" id="mixjyq"></span>
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
@@ -294,7 +294,7 @@
       </footer>
 
       <!-- link js -->
-      <script src="./js/menu.js"></script>
+      <script src="../../menu-pizzamigo/web/js/desayuno.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
