--- a/menu-pizzamigo-english/web/plato.html
+++ b/menu-pizzamigo-english/web/plato.html
@@ -54,14 +54,17 @@
         <p>Milanesa With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3500.png" alt="2800" srcset="">
+        <span class="text-black text-center pp p-5" id="Milanesa-c-g"></span>
+        <!-- <img class="precio " src="../../menu-pizzamigo/3500.png" alt="2800" srcset=""> -->
       </div>
       <div class="col-6 mt-5">
         <!-- bife de lomo c/guarnicion -->
         <p>Steak With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/4300.png" alt="3500" srcset="">
+        <span class="text-black text-center pp p-5" id="bifeDeLomo"></span>
+
+        <!-- <img class="precio " src="../../menu-pizzamigo/4300.png" alt="3500" srcset=""> -->
       </div>
       <div class="col-6 mt-5">
         <!-- napolitana -->
@@ -406,7 +409,7 @@
   </footer>
 
   <!-- link js -->
-  <script src="./js/menu.js"></script>
+  <script src="../../menu-pizzamigo/web/js/menu.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
