--- a/menu-pizzamigo/web/pizza.html
+++ b/menu-pizzamigo/web/pizza.html
@@ -39,7 +39,7 @@
     </nav>
     <!-- fin de barra menu -->
 
-    <div class="container-fluid">
+    <div class="container-fluid texto">
       <div class="row">
         <div class="col-12 bg-imag p-4">
           <h1 class="text-light text-center titulo">Todas las variedades al mismo precio</h1>
@@ -55,10 +55,14 @@
       </div>
       <div class="row">
         <div class="col-6 d-flex justify-content-center">
-          <img class="precio-metro" src="../5000.png" alt="$5000" srcset="">
+          <span class="text-black text-center pp p-5" id="pizzaMedio"></span>
+
+          <!-- <img class="precio-metro" src="../5000.png" alt="$5000" srcset=""> -->
         </div>
         <div class="col-6 d-flex justify-content-center">
-          <img class="precio-metro" src="../10000.png" alt="$10000" srcset="">
+        <span class="text-black text-center pp p-5" id="pizzaMetro"></span>
+
+          <!-- <img class="precio-metro" src="../10000.png" alt="$10000" srcset=""> -->
         </div>
       </div>
       <div class="row text-start">
@@ -205,7 +209,7 @@
         </div>
       </footer>
       <!-- link js -->
-      <script src="./js/menu.js"></script>
+      <script src="./js/pizza.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
