--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -50,74 +50,81 @@
       </div>
       <div class="col-12"></div>
       <!-- contenido de al plato -->
+                          <!-- prueba -->
       <div class="col-6 mt-5">
         <p>Milanesa c/ Guarnición</p>
       </div>
-      <div class="col-6 mt-5 ">
-        <span class="text-black text-center pp p-5">$3500</span>
+
+
+      <div class="col-6 mt-5 align-self-center">
+        <span class="text-black text-center pp p-5" id="milanesa"></span>
         <!-- <img class="precio " src="../precio-sin-num.png" alt="$3000" srcset=""> -->
       </div>
+
+          <!-- Fin prueba -->
+
       <div class="col-6 mt-5">
         <p>Bife de lomo c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../4300.png" alt="$2400" srcset="">
+        <span class="text-black text-center pp p-5" id="bifedelomo"></span>
+        <!-- <img class="precio " src="../4300.png" alt="$2400" srcset=""> -->
       </div>
       <div class="col-6 mt-5">
         <p>Napolitana c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3800.png" alt="$3200" srcset="">
+        <span class="text-black text-center pp p-5" id="napolitana"></span>
       </div>
       <div class="col-6 mt-5">
         <p>Costillitas a la barbacoa c/ papas Españolas</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../4000.png" alt="3300" srcset="">
+        <span class="text-black text-center pp p-5" id="costillitasbarbacoa"></span>
       </div>
       <div class="col-6 mt-5">
         <p>Bife de pollo c/Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3300.png" alt="2800" srcset="">
+        <span class="text-black text-center pp p-5" id="bifedepollo"></span>
       </div>
       <div class="col-6 mt-5">
         <p>Lomo a la Frontera</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../4300.png" alt="3500" srcset="">
+        <span class="text-black text-center pp p-5" id="lomoalafrontera"></span>
       </div>
       <div class="col-6 mt-5">
         <p>Lomo al Champignon</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../4300.png" alt="3500" srcset="">
+        <span class="text-black text-center pp p-5" id="lomoalchampi"></span>
       </div>
       <div class="col-6 mt-5">
         <p>Pollo al champignon</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../4000.png" alt="3000" srcset="">
+        <span class="text-black text-center pp p-5" id="pollochampi"></span>
       </div>
       <div class="col-6 mt-5">
         <p>Costeleta c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3800.png" alt="3300" srcset="">
+        <span class="text-black text-center pp p-5" id="costeleta"></span>
       </div>
 
       <div class="col-6 mt-5">
         <p>Costeleta a la Riojana c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio" src="../4100.png" alt="3200" srcset="">
+        <span class="text-black text-center pp p-5" id="costeletariojana"></span>
       </div>
 
       <div class="col-6 mt-5">
         <p>Milanesa de Cerdo c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../3300.png" class="precio" alt="$2700" srcset="">
+        <span class="text-black text-center pp p-5" id="milacerdo"></span>
       </div>
 
 
@@ -125,7 +132,7 @@
         <p>Milanesa de Berenjena c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../3000.png" class="precio" alt="2500" srcset="">
+        <span class="text-black text-center pp p-5" id="milaberenjena"></span>
       </div>
 
 
@@ -133,14 +140,14 @@
         <p>Suprema c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../3300.png" class="precio" alt="2800" srcset="">
+        <span class="text-black text-center pp p-5" id="suprema"></span>
       </div>
 
       <div class="col-6 mt-5">
         <p>Mila a Caballo c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3800.png" alt="3200" srcset="">
+        <span class="text-black text-center pp p-5" id="milacaballo"></span>
       </div>
       <!-- Tabla de milanesa -->
 
@@ -368,7 +375,7 @@
   </footer>
 
   <!-- link js -->
-  <script src="./js/menu.js"></script>
+  <script src="./js/plato.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
